# ArchonMCP

./: .gitignore  README.md  archon_mcp.py  deploy.bat  deploy.sh  project_venv.bat  project_venv.sh  pyproject.toml  run_audit.bat  run_audit.sh  run_tests.bat  run_tests.sh  system_prompt.md
.github/: copilot-instructions.md  naming-bootstrap.md
.github/prompts/: done.md  gap-analysis.md  harden.md
.github/skills/: done.md  migration.md  security.md
.github/workflows/: publish-python-package.yml  publish-testpypi-manual.yml
archon_mcp/: __init__.py  __main__.py  cli.py  constants.py  detector.py  scaffold.py  server.py  templates.py
docs/: TECHNICAL_GUIDE.md
docs/adr/: README.md
docs/stories/: README.md
tests/: test_archon_mcp.py  test_cli.py  test_constants.py  test_detector.py  test_scaffold.py  test_server.py  test_templates.py
