[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archon-mcp"
version = "0.1.4"
description = "ArchonMCP: A governance framework server for AI-assisted development"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "ArchonMCP Team", email = "dev@archonmcp.io" },
]
keywords = ["mcp", "governance", "framework", "ai", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=0.1.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "typing-extensions>=4.0",
]

[project.scripts]
archon-mcp = "archon_mcp.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["archon_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[[tool.hatch.envs.default.matrix]]
python = ["3.10", "3.11", "3.12"]
